--- a/styles/AdminPanel.module.css
+++ b/styles/AdminPanel.module.css
@@ -7,6 +7,8 @@
 
 .admin_panel table {
   color: white;
+  border-collapse: separate;
+  border-spacing: 0 1em;
 }
 
 .table_line {
@@ -27,4 +29,12 @@
   padding: 50px;
   text-align: center;
   font-size: 29px;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.hover :hover {
+  color: #0056b3;
 }
