refactor: Standardization of hover styles and activate menus

--- a/components/shared/AdminListTable/styles.module.css
+++ b/components/shared/AdminListTable/styles.module.css
@@ -40,6 +40,6 @@
 
 .admin_panel table tr td div:hover {
   cursor: pointer;
-  color: #00CFFF;
+  color: var(--color-hover);
   transition: color 0.2s;
 }
