--- a/components/shared/LateralMenu/styles.module.css
+++ b/components/shared/LateralMenu/styles.module.css
@@ -11,6 +11,14 @@
 .active {
   color: var(--color-active);
 }
+
 .active svg {
   color: var(--color-active);
+}
+
+@media screen and (max-width: 990px) {
+  .background {
+    visibility: hidden;
+    height: 0;
+  }
 }
